--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,9 +8,17 @@
 
 1. In your own words, why do we use Git?
 
+Git saves the changes we make to our code and keeps a record of previous versions of the code. 
+
 2. What are the benefits of having multiple branches?
 
-3. What is the difference between Git and GitHub
+The benefit of having multiple branches is that you can work on multiple aspects of development and merge them later. 
+
+
+3. What is the difference between Git and GitHub?
+
+Git is a local repository while GitHub is a remote repository. 
+
 
 ## Afternoon Assignment Link
 
