Finished Journal 2 (added hyperlink to GitHub)

--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -7,13 +7,18 @@
 ## Questions
 
 1. What is a Pseudo-Class and what are some of the most common ones you think you will use
+A Pseudo-Class is used to add animation after events like hovering your mouse over something and it changes colors. 
+:hover
+:visited
 
 2. What is Specificity and how might you use it to your benefit?
+Specificity is used to decide which rules are applied to elements. This can be helpful, because the higher the
+specificity is that rule is used. We can override lower rules by creating classes and things with higher specificity. 
 
 3. What problems do you think you could run into if you over-utilized the !important feature?
-
+You would run into the problem of never being able to override specificity because everything would be the highest specificity. You would have to go to every location to change anything. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/CoolSite/)**
 
 Identify at least 1 takeaway from today's assignment
