--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -21,4 +21,6 @@ You would run into the problem of never being able to override specificity becau
 
 **[Repo](https://bdvassar.github.io/CoolSite/)**
 
-Identify at least 1 takeaway from today's assignment
+Identify at least 1 takeaway from today's assignment:
+
+Do not think about the page as a whole. Create your boxes and fix each box to work. 
