--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -7,10 +7,13 @@
 ## Questions
 
 1. What is your favorite tip that you think is the most beneficial to improving your design?
+My favorite tip was dealing with the font. I have always used different font sizes and it has never come out the way i have wanted it to. Glad to see some suggestions on how to correct this. 
 
 2. Compile a couple resources that you think might be helpful when trying to review examples of good design ideas.
 
+
 3. How do you think good design influences people when visiting a website and what sorts of things could you convey through design alone?
+
 
 ## Afternoon Assignment Link
 
