--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -12,6 +12,8 @@ My favorite tip was dealing with the font. I have always used different font siz
 2. Compile a couple resources that you think might be helpful when trying to review examples of good design ideas.
 
 
+This is test
+
 3. How do you think good design influences people when visiting a website and what sorts of things could you convey through design alone?
 
 
