--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -10,15 +10,14 @@
 My favorite tip was dealing with the font. I have always used different font sizes and it has never come out the way i have wanted it to. Glad to see some suggestions on how to correct this. 
 
 2. Compile a couple resources that you think might be helpful when trying to review examples of good design ideas.
-
-
-This is test
+W3schools
+Codepen
 
 3. How do you think good design influences people when visiting a website and what sorts of things could you convey through design alone?
-
+Good design allows people ease of access to your content. It give your website a "mood" depending on what clientele you are trying to reach. 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/clone-site/)**
 
 Identify at least 1 takeaway from today's assignment
