finished journal day 4

--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -7,13 +7,18 @@
 ## Questions
 
 1. What is the purpose of wire-framing? 
+To allow designers to agree on the design and features of a website before coding of the website begins. 
 
 2. What are the different levels of detail in wire-frames and why is each one useful?
+low-fidelity: It is useful when you are just wanted to go over basic design features like placement.
+medium-fidelity: It is useful when you want to see more of the structure of the website and some minor design elements. 
+high-fidelity: Great for finally approval and and shows the functionality of the website. 
 
 3. Do you think wire-frames are worth the Time, Energy, and Effort that they require? Why or Why not?
+Absolutely! They keep the time and financial costs lower on your project. They are also easier to manipulate so you do not have to rewrite your code over and over again. 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/clone-knight/)**
 
 Identify at least 1 takeaway from today's assignment
