--- a/reflections/week01/05.md
+++ b/reflections/week01/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+I feel like getting back into coding in general went well for me this week. I have not coded for about 2 years I think, but it already feels like I am as comfortable as I was then. 
 - What did you learn as a shock or suprise?
+I had no idea that extensions like bootstrap existed out there. Such a great tool! 
 - What are you struggling with?
+My lack of knowledge about CSS and HTML, but I am looking up and reading daily. I was feeling pretty scared about doing the mobile @media content for a little while. 
 - What would you count as a victory?
+Finishing CP-1 and not feeling like I was completely lost. I was able to create a lot of it without having to reference prior code or bootstrap documents. Once it got past the basics thought I was thrilled to have those resources at hand. 
