--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -7,13 +7,16 @@
 ## Questions
 
 1. What is Scope ?
-
+Scope is used to determine where a variable is available to be used. if you declare inside a function it is only able to be used inside that function or if you declare on the main java doc it can be used on the entire document. 
 2. What is Hoisting ?
-
+Hosting is where if we declare a var inside of our function somewhere javascript automatically declares the var at the begging of that scope with and empty var. 
 3. In what cases might you use let vs const vs var?
+The let declaration would be good to use if you do not want to declare the same variable again. in functions would be a good place to use let.
+The const declaration would be good to use if you have something that you want to ensure does not change period, like when using for loops.
+The var declaration would be good to use if you want to change the variable throughout your entire document several time.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/scoreboard/)**
 
 Identify at least 1 takeaway from today's assignment
