--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,12 +8,28 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+function declarations- this can be used before defining the function. 
+
+function expression- is has to be used after it is defined. 
+
+arrow functions- Create an sort of temporary function that is not required to be defined.
+
 2. What is the difference between Parameters and Arguments?
 
+parameters are what the function is expecting to receive to gain a value.
+arguments are what is passed into the function to give it the value. 
+
 3. What are higher order functions? Can you provide an example?
+higher order functions are when a function is passed in another function.
+
+Array.foreach()
+Array.find()
+Array.filter()
+Array.map()
+
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/packageSort/)**
 
 Identify at least 1 takeaway from today's assignment
