--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -7,13 +7,16 @@
 ## Questions
 
 1. What are the main ways to write information to the console? Why/when should you use each style.
+In the Elements tab, and Console Tab. The Elements tab should be used when you want to modify anything to do with the layout and style of your page. The Console should be used when you are manipulating your javascript.
 
 2. Which tab allows you to see the breakdown of HTML/CSS and how can this tab be useful when debugging HTML?
+The Elements Tab allows us to see the HTML/CSS and it can manipulate the website that is open directly. This is great for making changing and seeing the instant result they will have your website. 
 
 3. Outside of writing everything to the console, what is a better way to debug your code?
+Using th debugger tool in your Sources Tab would be a better way to debug your code. You can add the bootstrap debug style as well which will activate the debugger tool.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/iceCreamParlor/)**
 
 Identify at least 1 takeaway from today's assignment
