--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -7,13 +7,20 @@
 ## Questions
 
 1. What are the benefits of making a plan before starting to just write the code?
+It provides you with a good structure and outline for what you want your code to do. To much planning is not good, and to little planning is not good. Planning out the next couple features would be best and allows you to be more flexible to the changes that are bound to happen. 
 
 2. How do you find answers when you are stuck?
+You can find answers all over the place when you are stuck. Google to try and find some code and make a solution, reach out to a colleague to see if they may have and idea of what to do. Collaboration among software developers is huge. 
 
 3. From the entire article what are your biggest takeaways?
+my top 3 would be these.
+
+ 1  have a general plan and review it often.
+ 2 if you get stuck look for an answer before you try to reinvent the wheel.
+ 3 quality over quantity. 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/bossMonster/)**
 
 Identify at least 1 takeaway from today's assignment
