--- a/reflections/week02/05.md
+++ b/reflections/week02/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+This week i felt like building my projects when pretty well. I was able to get a good flow and accomplish a lot. 
 - What did you learn as a shock or suprise?
+While Java and JavaScript are very different, they still have the same principles and logic to follow. 
 - What are you struggling with?
+Currently I am struggling just making little mistakes to my code and having to go back and debug them, also a lack of knowledge to do some of the things i want to do.
 - What would you count as a victory?
+It is starting to feel normal sitting in front of a computer and coding again. I have been feeling disconnected form coding since starting again. This week felt very fluid and i was able to flow. 
