--- a/reflections/week02/05.md
+++ b/reflections/week02/05.md
@@ -4,7 +4,7 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 ## Prompts
 - What went well this week?
 This week i felt like building my projects when pretty well. I was able to get a good flow and accomplish a lot. 
-- What did you learn as a shock or suprise?
+- What did you learn as a shock or surprise?
 While Java and JavaScript are very different, they still have the same principles and logic to follow. 
 - What are you struggling with?
 Currently I am struggling just making little mistakes to my code and having to go back and debug them, also a lack of knowledge to do some of the things i want to do.
