added GitPages and finished w3d1 journal

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What problem does using exports solve?
-
+having to write multiple script tags in your HTML. This reduces the calling of HTTP requests everything that  javascript file is accessed. This gives us better performance and speed. 
 2. How does export differ from export default?
-
+just using export lets you use all methods with an alias. with the default you would have to default everything you want to use. 
 3. What is a benefit of using the Module System?
-
+Increased performance, debugging is easier, helps with declaring errors from using the same name
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w3d1-gameNight/)**
 
 Identify at least 1 takeaway from today's assignment
