--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w3d2-vendr/)**
 
 Identify at least 1 takeaway from today's assignment
