--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -17,3 +17,4 @@ Increased performance, debugging is easier, helps with declaring errors from usi
 **[Repo](https://bdvassar.github.io/w3d1-gameNight/)**
 
 Identify at least 1 takeaway from today's assignment
+Make sure everything is importing and exporting, and not everything needs to import and export to each other. 
