--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -7,13 +7,15 @@
 ## Questions
 
 1. What is the purpose of Encapsulation?
-
+it protects data from being directly modified and requires the use of messages to change the data. 
 2. What were some of the problems with closures and the underscore prefix?
-
+a lot of new developers do not know the practice and use them anyways, and experienced developers will use them thinking they know what they are doing and do not need to follow the convention. Increased area for hackers to mess with your code. 
 3. How do we create private variables in a ES6 Class? Why would you do this?
+Using Closures, Class Fields. We would do this to ensure the end user does not have access to the variables they do not need to interact with. 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://bdvassar.github.io/w3d2-vendr/)**
 
 Identify at least 1 takeaway from today's assignment
+learned how to use local storage, and was able to import and export better. 
