--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -7,10 +7,10 @@
 ## Questions
 
 1. What are the two common operations that we will set in the handler?
-
+get and set
 2. What do you have to make sure you are doing with every Get to ensure the value does not become `undefined`?
-
-3. What are some of the benefits of the proxy object that we are using in our structure for applications?
+we need to provide our get with the trap override. 
+3. What are some of the benefits of the proxy object that we are using in our structure for applications? It is good for checking if the information being access is allowed to be accessed. we can ensure proper data types are being inserted. 
 
 ## Afternoon Assignment Link
 
