--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -17,3 +17,4 @@ we need to provide our get with the trap override.
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+have separate controllers and services is great for organization. 
