--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -14,7 +14,7 @@ we need to provide our get with the trap override.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w3d3-gregslist/)**
 
 Identify at least 1 takeaway from today's assignment
 have separate controllers and services is great for organization. 
