--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -7,13 +7,14 @@
 ## Questions
 
 1. What problems does the Observer Pattern seek to solve?
-
+The push and pull in code to sync data
 2. What are the three mechanisms of the observer pattern?
-
+subscribe, unsubscribe, and broadcast
 3. Review the code generated from the bcw-template and reflect on the proxy objects from yesterday, and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the dom.
 
+The way I believe that bcw-template is that it has code exported and an observer to listen for the command bcw-template.
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w3d4-fruitsalad/)**
 
 Identify at least 1 takeaway from today's assignment
