--- a/reflections/week03/05.md
+++ b/reflections/week03/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
-- What did you learn as a shock or suprise?
+I felt like I was better able to do the logic in my head to solve problems. Feeling much more confident with my syntax in JavaScript. 
+- What did you learn as a shock or surprise?
+mvc was a nice surprise, although it took a little to get use to it is way more organized.
 - What are you struggling with?
+Knowledge for sure, remembering small syntax things and having to look at a lot of references in bootstrap.
 - What would you count as a victory?
+I have been able to work through and do the majority of my assignments without the use of references.(I look at them only if I have tried to fix something a min. of 2 times. )
