w4d1 journal questions answered.

--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -8,9 +8,19 @@
 
 1. What are some of the signs and causes of `Callback Hell`?
 
+A lot of }), writing code as if it will only run line by line, slow page or one that pauses before something large is downloaded. 
+
 2. What does the asynchronous mean and how are callbacks involved?
 
+asynchronous means that something will happen in the future. they involved with callbacks by starting something in your code and waiting until something completes to start another function. Asynchronous function can happen while other code is running. 
+
 3. Summarize the 3 ways to avoid / fix `Callback Hell`
+
+1. Try not to use anonymous function is possible. when you get a path it is easier to know where problems are if you have and function with a descriptive name. 
+
+2. Separation of functions in different .js files so that our main code can be clean and easy to read. This also allows us to use these functions in other places. 
+
+3. at the start of every function ensure that you return and error is the function does not work, otherwise you will have to go through all of your call back to find out if and error even happened. 
 
 ## Afternoon Assignment Link
 
