--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -24,6 +24,6 @@ asynchronous means that something will happen in the future. they involved with 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w4d1-Trivia/)**
 
 Identify at least 1 takeaway from today's assignment
