--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What are the three states of a `Promise`?
-
+Pending, Resolved, and Rejected
 2. How do `promise`s seek to resolve the issues of "callback hell"?
-
+Promises seek to resolve callback hell with chaining of promises with callbacks pass inside each promise. 
 3. What is the difference between `.then()` and `.catch()`?
-
+.then() is used for resolved promises moving onto what need to happen when the promise is fulfilled, and .catch() is used for rejected promises to let us know that the promise was rejected. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/gregsListAsync/)**
 
 Identify at least 1 takeaway from today's assignment
