--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What is the purpose of `Async`/`Await`?
-
+To reduce the complexity of promise syntax. Async / Await pauses the code making it asynchronous and non-blocking. 
 2. What must you do in order to  `await` a promise inside of a function?
-
+First you much Async your function creating a promise that must be fulfilled before the code moves on. 
 3. What are some of the primary benefits of `Async`/`Await`?
-
+It makes our code more concise and is easier to debug.
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/w4d3-pokedex/)**
 
 Identify at least 1 takeaway from today's assignment
