--- a/reflections/week04/05.md
+++ b/reflections/week04/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+I am enjoying and doing well with the separation of information in our programs. 
 - What did you learn as a shock or suprise?
+That the async/await makes things much easier. It is nice to not have to write all of our own promises.
 - What are you struggling with?
+I struggled a little with the API's at first, but feel like I have come a log way since monday. 
 - What would you count as a victory?
+I was able to get my checkpoint completed even though I had a 4 day drive, and flight during the break. I did a little everyday and feel like i have maintained my coding process because of it. 
