--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What does REST stand for, and in simple terms what does it mean?
-
+Representational State Transfer. It is constraints placed upon an API to make it easier for a new Developer to use. 
 2. What does Stateless mean?
-
+Stateless means that the API will not hold onto the users information, and will not try to collect any information. 
 3. What URL pattern is used when writing a RESTful API?
-
+They need to have unique ending which correlates to the information the client wants to see. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://bdvassar.github.io/gifted/)**
 
 Identify at least 1 takeaway from today's assignment
