w5d1 journal complete, w5d2 assignment linked

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -7,13 +7,14 @@
 ## Questions
 
 1. What is the purpose of a Query String?
-
+The purpose of a Query String is to access different information on a website by simply adding information to the end of a URL. 
 2. What is the format of a query parameter? How does it start? How do you distinguish between one parameter and the next?
-
+The format for a query parameter is "param=value". You start a query parameter with a "?". If you have multiple parameters they will be separated by a "&". together they look like this "?param1=value&param2=value"
 3. When do you think Query parameters would be helpful when writing your server?
-
+Query parameters would be great to use when you want the user to be able to sort through the information on your servers easier. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/SuperBurger)**
 
 Identify at least 1 takeaway from today's assignment
+Make sure you are paying attention to what you are returning, and how you are doing it. 
