--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/GregslistAPI)**
 
 Identify at least 1 takeaway from today's assignment
