--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -9,9 +9,9 @@
 1. What are the three types of relationships?
 one-to-one, one-to-many, Many-to-Many.
 2. What are the benefits of the traditional `linking` of relationships instead of `Embedding`
-
+it keeps the document under the max document size in MongoDB, it allows you to sort and splice through the information.
 3. What are some of the challenges faced when deciding how to manage a many-to-many relationship that ultimately drive your decision on how to create it?
-
+size of arrays to be connected, read performance
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/GregslistAPI)**
