--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -6,13 +6,15 @@
 ## Questions
 
 1. In simple terms what is timeboxing?
-
+It is a time Management tool designed to keep you organized and on time with developments. It created mini deadlines that need to be met, and focuses time for different things to be completed in. 
 2. What three strategies will you implement and how?
-
+select the hardest take to work on first.
+use your "golden hour" to be productive.
+only use Timeboxing for essential work. 
 3. Give an example of when you would have benefitted from timeboxing and how? 
-
+I think the hackathon would have been a great time to use Timeboxing. not focusing on making th project perfect, but focusing on getting the most work out of our time to have an operational website. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo]https://github.com/BDVassar/Da-Planets)**
 
 Identify at least 1 takeaway from today's assignment
