--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What is a virtual property?
-
+A virtual property is a logical return that is append to the returned data. 
 2. When might you use a virtual property? 
-
+When you want to append other information to your data from another source, and when you want to adjust the data on your document for all your objects by writing the change once. 
 3. How do you search by a virtual properties value?
-
+foreignKey, localKey, and Ref. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/BaldBaddies)**
 
 Identify at least 1 takeaway from today's assignment
