--- a/reflections/week05/05.md
+++ b/reflections/week05/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+I feel like creating the actual back-end went well for me. I enjoyed the logic and break form styling. 
 - What did you learn as a shock or suprise?
+That for the objectId to work there needs to be a virtual to address what you are looking for. 
 - What are you struggling with?
+linking the path in my head from the back end to the front end. I do not feel like I have a total understanding of the specifics. 
 - What would you count as a victory?
+After writing several Virtuals and getting some assistance from a TA I felt my understanding of Virtuals became much more clear. 
