--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -7,13 +7,14 @@
 ## Questions
 
 1. What is Component based architecture?
-
+component based architecture is when you build out a site using individual components compared to separate files like the MVC model. 
 2. What are some benefits of Component based architecture?
-
+each Component is dynamically updated so the entire site does not need to be reloaded. Components are reusable and interchangeable. 
 3. What are some drawbacks to Component based architecture?
-
+bloating, polluting views, over-engineering
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/Playground)**
 
 Identify at least 1 takeaway from today's assignment
+you can get more done in less time with Vue. 
