notes and Journal 2 complete

--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What are props?
-
+props are how we pass variables between components in vue. They act like arguments and parameters in the most basic sense of an explanation. 
 2. What are props used for?
-
+props are used to pass variables down to child component. 
 3. Where can props be used or accessed?
-
+Props can be used in the <template> area using v-bind. Props can be accessed in the child component right above the setup() using export default{props: {prop information}}.
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/vueGifted)**
 
 Identify at least 1 takeaway from today's assignment
