Week 6 Journal 3 complete

--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -7,13 +7,14 @@
 ## Questions
 
 1. What are lifecycle hooks? What are lifecycle hooks used for?
-
+Lifecycle hooks are a listener back-end. 
+Lifecycle hooks allow you to update your DOM. 
 2. How have you utilized lifecycle hooks in your afternoon projects?
-
+onMounted.
 3. What are mounting hooks? When might you use them?
-
+mounting hooks are used to update your DOM. you would use them if you are going to be changing anything on the page. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/gregslistVue)**
 
 Identify at least 1 takeaway from today's assignment
