--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What is a nested route?
-
+nested route is a simulation of a new url page. 
 2. When might you use a nested route? (other than the provided example)
-
+when you want to create the illusion of changing pages. 
 3. Can you pass parameters through nested routes? When might you use them?
-
+yes you can, when you need to pass that parameter into a function to get something related to that parameter. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/bloggerVue)**
 
 Identify at least 1 takeaway from today's assignment
