--- a/reflections/week06/05.md
+++ b/reflections/week06/05.md
@@ -3,6 +3,12 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+Nothing....nothing went well this week.
+
 - What did you learn as a shock or suprise?
+Vue is much nicer than mvc
+
 - What are you struggling with?
+Vue was really hard for me this week, because I was taking care of my sick family.
 - What would you count as a victory?
+I was able to get my project completed!
