Wee7 Journal 1 Complete

--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What is Pair Programming? What are the roles and how do they work?
-
+Pair Programming is when you have two people sharing a computer to program together. The roles are driver and navigator. The driver is at the keyboard and the navigator is the programmer that is not typing. 
 2. What are some benefits of Pair Programming?
-
+Increased code quality, helps everyone gain knowledge, great to transfer skills and help the junior dev, 
 3. What are some drawbacks to Pair Programming?
-
+your overhead could be higher by having 2 people working on one code in stead of working individually. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
