--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What is a User Experience? What should be considered when developing a User Experience?
-
+The User Experience is every interaction between your clientele and your website. Things to consider when building a website would be the how the user is going to interface with your website(and how you think they would want to.). Feeling and emotions associated with your website while they use it. 
 2. What are some benefits of taking into account the User Experience?
-
+This will keep your customers happy and make their experience on your website enjoyable. 
 3. Why is the User Experience important?
-
+It keeps people coming back and feeling appropriately when they come to your website. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
