Week 7 Journal 2 Complete

--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What is Code Documentation? What are some of the ways to document code?
-
+Code documentation is the process of explaining what your code does when you create the code. Some ways to document are howto guides, readme's, code documentation, tutorials..etc. 
 2. What are some benefits of Code Documentation?
-
+The benefits are that the code is explained. It gives people the ability to know what the code is supposed to do. if you use JSDoc it will also help with the intellisense.
 3. How important is Code documentation and why?
-
+Code documentation is very important. We will never remember every line of code that we create and documentation allows us to keep a knowledge of what the code is supposed to do. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
