week 7 Journals and Quiz complete

--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -3,13 +3,13 @@
 ![replace_me](https://codeworks.blob.core.windows.net/public/assets/img/illustrations/placeholder.svg)
 
 ## Reflect on your partner project and answer the following questions
-
+ 
 1. Which principles from this weeks reading did you implement?
-
+I was better about writing anchor tabs this week to note my section out. We also built out a better UI this week due to phase 2 requirements, I did keep in mind what mick said about if they will be able to use it later it should be visible and disables. 
 2. What went well this week?
-
+Styling (I will write more about this in day 5 journal?)
 3. What would you do differently?
-
+nothing
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
