--- a/reflections/week07/05.md
+++ b/reflections/week07/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+This week I was able to do a good job getting my website to look like the figma we were assigned. I tried to make sure I was able to recreate the project i was assigned as close as possible. 
 - What did you learn as a shock or suprise?
+to think about what data in your appstate is going to be. I was saving empty arrays as null and it was causing reactivity problems in vue. 
 - What are you struggling with?
+I was struggling with syntax and missing random little things this week. (I am sure time will improve this/ debugging will get better with time.)
 - What would you count as a victory?
+I was able to get my Duck!
