--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -7,13 +7,14 @@
 ## Questions
 
 1. What function does a developer Portfolio provide?
-
+To show off your skills and set you apart from the competition. 
 2. What makes a Developer Portfolio effective?
-
+It should show off different aspects of what you can do, or it can be more focused to showcase a more specific skill you want to showcase. It should be concise and to the point, not bloated and overloaded. 
 3. What projects do you have that you would include in your Portfolio? Why?
-
+tower, capstone possibly, and the final. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/DailyRhythm)**
 
 Identify at least 1 takeaway from today's work
+team work sometimes take a different turn than expected. 
