github added to all journals, and journal 2 complete

--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. Why is communication on a small team important?
-
+It is important because a lack of clear communication and organization can lead to unwanted extra meeting and taking time away from development.
 2. What adjustments from traditional sized scrum teams need to be made to use the agile methodology effectively in a small team?
-
+there will need to be changes in communication during meeting, only including specific people so that the developers can achieve more work. 
 3. What is the unattainable triangle? What are the tradeoffs of each side?
-
+it is Good-Fast-Cheap, the trade off of each sides are speed or quality in relation to the cost of the project. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/DailyRhythm)**
 
 Identify at least 1 takeaway from today's work
