--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What is Software Development Testing?
-
+it is writing a function to test small units of code. 
 2. What are the benefits of Testing in software development?
-
+peace of mind knowing that the code is working as you are going. confidence it the code that you wrote to execute properly.
 3. What are some potential drawbacks of Testing in software development?
-
+it could fail in ways that we did not think of, meaning that we could miss failures in our code that we thought we had caught. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/DailyRhythm)**
