--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
-
+Unit testing, component testing, end-to-end testing. Each method allows us to test our code differently at different levels. 
 2. What testing method do you think is the most useful? Why?
-
+end-to-end testing, it relates most to the real world application of your program. 
 3. What testing method do you think is the least useful? Why?
-
+component testing, it seem like it is slightly more verbose than unit testing. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/DailyRhythm)**
