--- a/reflections/week08/05.md
+++ b/reflections/week08/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+We were able to bounce back from a group change and pass our pitch.
 - What did you learn as a shock or suprise?
+that what you start with you could be completely different than what you start with. 
 - What are you struggling with?
+taking breaks
 - What would you count as a victory?
+we were able to finish our backend. and are just working on the front end. 
