--- a/notes/w9d2.md
+++ b/notes/w9d2.md
@@ -8,6 +8,7 @@ run build command in console
    run npm i first
    nmp run build
    should load front end into assets in the client folder
+push everything to GitHub
 open render
    new webservice
    give access for render to look at your git.
@@ -24,4 +25,3 @@ open render
      AUTH_CLIENT_ID
 open up your auth0
    find your app and add the URL to the allowed URL's
-   
