--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -5,13 +5,18 @@
 ## Questions
 
 1. What technologies and principles are you using in your project?
-
+we are using the API’s
+photos - unsplash
+quotes - zenquotes
+jokes - icanhazdadjoke
+open weather map api
 2. What went well so far?
-
+connecting to API's and getting all of that to work went well. And getting the server side of things went well. 
 3. What would you do differently? Why?
-
+We spent to much time focusing on something that was not a major component of our application, and it caused us not to complete our MVP. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+In pair coding communication is key, and if your partner does not communicate you cannot proceed forward with your own work. 
