--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -16,7 +16,7 @@ connecting to API's and getting all of that to work went well. And getting the s
 We spent to much time focusing on something that was not a major component of our application, and it caused us not to complete our MVP. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/DailyRhythm)**
 
 Identify at least 1 takeaway from today's work
 In pair coding communication is key, and if your partner does not communicate you cannot proceed forward with your own work. 
