--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -14,6 +14,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/DailyRhythm)**
 
 Identify at least 1 takeaway from today's work
