--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -16,6 +16,6 @@
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/DailyRhythm)**
 
 Identify at least 1 takeaway from today's work
