--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -7,11 +7,11 @@
 ## Questions
 
 1. What is a Github action and how do they work?
-
+A github action notifies you when someone has performed an action like push pull or opening your project. you will add YAML file with different jobs that you assign them. 
 2. What benefits do Github actions provide?
-
+It allows you to know what is going on with your repository, and track/ set up times for actions you want performed. 
 3. What types of trigger actions can a workflow use? What do they do?
-
+trigger action are like pushing, pulling, forking. they trigger the YAML file to run. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/DailyRhythm)**
