--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -9,11 +9,11 @@
 ## Questions
 
 1. What is a Base64 Encoded Image?
-
+it is and image that is represented in a text format that correlates to its binary data. 
 2. What are the drawbacks of using Base64 Encoding?
-
+increased download times, an average 25% increase in file size, add a layer of unnecessary work, and it is unable to be cached. 
 3. Why are these drawbacks issues in this day and age versus in the past?
-
+websites are now better are receiving vast amounts of data with a single connection. Before this would have been great because it would have saved the website a request for information. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/DailyRhythm)**
