--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -7,11 +7,16 @@
 ## Questions
 
 1. What is an SSL certificate?
-
+a small file that encrypts your web server and browser.
 2. What are the different types of certificates? What are they used for?
-
+extended
+-ensure users that they are not a span site.
+organization
+- ensures users that your website and organization are valid.
+domain
+- just shows that the person who owns the domain has the right to own it.
 3. What are some benefits of using SSL certificates?
-
+It shows users that their information is safe and that you are operating a legal business that owns the domain. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/DailyRhythm)**
