--- a/reflections/week09/05.md
+++ b/reflections/week09/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+learn a lot about one to one data relationships 
 - What did you learn as a shock or suprise?
+simple mistakes sometimes take a long time to overcome. 
 - What are you struggling with?
+interpersonal skills when coding in a group. 
 - What would you count as a victory?
+I was able to learn a lot of new stuff by doing the capstone.
