week 10 Journal 1 complete

--- a/reflections/week10/01.md
+++ b/reflections/week10/01.md
@@ -7,14 +7,19 @@
 ## Questions
 
 1. What are the three categories of data types? How are they different?
+Value Type, reference Type, Pointer Type
 
+Value Type directly save date in its own memory spaces as values. 
+Reference Type is a location of stored data related to an object. 
+Pointer Type strictly just point to a value not associated with an object. 
 2. What are the Value-type data types? What differences do you notice from JavaScript?
-
+bool, byte, char, decimal, double, enum, float, int, long, sbyte, short, struct, uint, ulong, and ushort.
+There seem to be more data types than what was available in JavaScript. And you must explicitly say what data type you are casting. 
 3. In your own words how do Reference types get stored in memory? How does this differ from Value types?
-
+Reference types get stored as a placeholder with directions on where the data is being stored in an object. Value types store a specific value and Reference types on store pointers. 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/ChoreScore)**
 
 Identify at least 1 takeaway from today's assignment
