Git links added, Week 10 Journal 2 complete

--- a/reflections/week10/02.md
+++ b/reflections/week10/02.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What is a List in C#?
-
+List is a type that can have different values types in it. 
 2. What List methods seem like you might use them often? Why?
-
+they replace arrays in C# so when we need a group of values we will have to use Lists. 
 3. How would you retrieve an item from a list? What method could you use?
-
+List.Find. will find the value that matches what you are looking for. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/GregsList-dotnet)**
 
 Identify at least 1 takeaway from today's assignment
