--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -18,6 +18,6 @@ DROP TABLE table_name;
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/StarTrekShips)**
 
 Identify at least 1 takeaway from today's assignment
