week 10 journal 3 complete

--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -7,15 +7,21 @@
 ## Questions
 
 1. In a SQL table, what is the difference between information in a row and information in a column?
-
+A row of information contains a complete object and a column only contains specific properties on the objects. 
 2. Demonstrate the basic structure for creating a new table called `characters` with the values `name, age, description` as strings, and an `int` id.
+CREATE TABLE characters(
+  id INT NOT NULL AUTO_INCREMENT PRIMARY KEY,
+  name VARCHAR(255) NOT NULL,
+  age INT NOT NULL,
+  description VARCHAR(255) NOT NULL
+) default charset utf8;
 
 3. What are the difference between the following statements: 
 ```sql
 DELETE FROM table_name;
 DROP TABLE table_name;
 ```
-
+delete will remove and object and drop table will completely delete your table. 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/BDVassar/StarTrekShips)**
