--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -7,10 +7,10 @@
 ## Questions
 
 1. What is an Enum, and what are some use cases for them?
-
+and enum is a strongly typed cast. you would use them if you want to use an int representation to point to a specific value. 
 2. How can you modify an Enum?
-
-3. How have you used Enums in your afternoon lab projects this far?(if you have not yet, give an example of how you could)
+you can modify an enum by going into its class and changing the values there. 
+3. How have you used Enums in your afternoon lab projects this far?(if you have not yet, give an example of how you could) I have not used them yet, but would use them to set a priority level on the chore score project. 
 
 ## Afternoon Assignment Link
 
