--- a/reflections/week10/05.md
+++ b/reflections/week10/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+having and understanding of c# has gone well for me. I feel like I am starting to already use my references less.  
 - What did you learn as a shock or suprise?
+sql feels like it is to "easy", not that it is, but that the syntax is so short. 
 - What are you struggling with?
+still learning the syntax.
 - What would you count as a victory?
+was able to create a new project that I can see myself working on as a project after the course is complete. 
