week 11 journal 1 complete

--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What does Inheritance accomplish for us in C#?
-
+It allows the child calss to use everything form its parent class that is public.
 2. How does Member inheritance work in C#? Does a class inherit all members of the base class?
-
+you share the reference when you extend a class. It only inherits the public information on the parent class. 
 3. How does accessibility affect inheritance?
-
+accessibility will either allow the information to be passed or will keep it specifically with th parent class. 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/AllSpice)**
 
 Identify at least 1 takeaway from today's assignment
