week 11 journal 2 complete

--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -7,9 +7,9 @@
 ## Questions
 
 1. What is the difference between a `primary key` and a `foreign key`
-
+a primary key is unique information used to identify a row on a table. A foreign key is is a reference to the primary key on another table. 
 2. What is an `Alias`?
-
+An Alias is a reference to a specific table withing a single statement. 
 3. Demonstrate how you would query a join statement that would get all of a doctors patients from the following collections:
 
 ```SQL
@@ -36,10 +36,17 @@ CREATE TABLE doctors (
     REFERENCES patients(id),
 )
 
+SELECT 
+doc.*,
+pat.*,
+dmany.*
+FROM doctors dmany
+JOIN patients pat ON dmany.patientId = pat.id
+WHERE dmany.doctorId = doc.id;
 ```
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/AllSpice)**
 
 Identify at least 1 takeaway from today's assignment
