week 11 journal 3 complete

--- a/reflections/week11/03.md
+++ b/reflections/week11/03.md
@@ -7,13 +7,13 @@
 ## Questions
 
 1. What is SQL injection?
-
+It is where you inject data directly into a database using SQLi.
 2. What are 3 methods SQL injection can be done by?
-
+user input, modifying cookies, HTTP readers. 
 3. How can we detect and sanitize SQL injection attacks?
-
+Using a WAF and an IDS 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/AllSpice)**
 
 Identify at least 1 takeaway from today's assignment
