week 11 journal 4 complete

--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -6,8 +6,10 @@
 
 Write a review and reflection of your experiences in this course, as this is the last lecture before your `final project`, what are your concerns, how do you plan to manage your time, what have you enjoyed most about the course up to this point.
 
+I have enjoyed my time at CodeWorks tremendously. I have come from knowing nothing about the languages and programs we started with and now feel comfortable enough to get a job. My concerns going into the final is going to be juggling the needs of my family with the time I need to get the project complete. I plan to work when I can focusing on completing one task at a time. I will set goal that i need to complete to finish the project on time. I have enjoyed learning something that has always interested in the way I learn bets(hands on). 
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/BDVassar/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/BDVassar/AllSpice)**
 
 Identify at least 1 takeaway from today's assignment
