week 11 journal 5 complete

--- a/reflections/week11/05.md
+++ b/reflections/week11/05.md
@@ -3,6 +3,10 @@ This reflection is an open format, so it can be whatever you like. Take this opp
 
 ## Prompts
 - What went well this week?
+having a better understanding of C# and SQL.
 - What did you learn as a shock or suprise?
+Even the small break from Vue made it harder than i expected to start and remember syntax. 
 - What are you struggling with?
+Thinking to far ahead. I need to focus on the project at hand. 
 - What would you count as a victory?
+Being able to understand mySQL and C# enough to help some other understand it better. 
