--- a/reflections/week12/01.md
+++ b/reflections/week12/01.md
@@ -3,5 +3,8 @@ This is a stressful week! You are working on a project that closely mimics what 
 
 ## Prompts
 - How is today going? 
+Today was a good day, moved forward a long way.
 - Are you managing your stress?
+I am just focusing on doing one task at a time to work my way to the big goal.
 - What has you most worried?
+Making sure I am done on time. 
