week 12 journal 2 complete

--- a/reflections/week12/02.md
+++ b/reflections/week12/02.md
@@ -1,7 +1,10 @@
 # Daily Reflection
 Two full days in! Did you make the progress you were hoping for yesterday and today? How are you working? Client -> Server, focusing only on the server for now?  
-
+I Was ready to have my first grading at the end of today. feel like I am managing my time very well and making great headway.
 ## Prompts
 - How is today going? 
+today was great got a lot done and complete my project for first grading
 - Are you managing your stress?
+Just focusing on one task at a time. 
 - What has you most worried?
+not much now. Just hoping to get a duck. 
